baseEnvironment/envoy/envoy.yaml
static_resources:
  listeners:
    - name: listener_0
      address:
        socket_address:
          address: 0.0.0.0
          port_value: 8080
      filter_chains:
        - filters:
            - name: envoy.filters.network.http_connection_manager
              typed_config:
                "@type": type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v2.HttpConnectionManager
                stat_prefix: ingress_http
                route_config:
                  name: local_route
                  virtual_hosts:
                    - name: local_service
                      domains:
                        - '*'
                      routes:
                        - match: { prefix: "/" }
                          route:
                            cluster: service_consul  # 将流量路由到名为service_consul的集群
              http_filters:
                - name: envoy.filters.http.router

  clusters:
    - name: service_consul
      connect_timeout: 1s
      type: logical_dns
      http2_protocol_options: { }
      lb_policy: round_robin
      load_assignment:
        cluster_name: service_consul

      hosts:
        - socket_address:
            address: consul
            port_value: 8500  # Consul的默认端口
